{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 173,
  "lineage": "b6531440-4f0d-35b4-27bb-5be9e271fba9",
  "resources": [
    {
      "module": "module.app",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "app_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.242.211.90",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2020-11-06T12:12:49.619-08:00",
            "id": "projects/spry-framework-287506/regions/europe-west3/addresses/reddit-app-ip",
            "name": "reddit-app-ip",
            "network_tier": "PREMIUM",
            "project": "spry-framework-287506",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spry-framework-287506/regions/europe-west3/addresses/reddit-app-ip"
          }
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_puma",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9292"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-11-06T12:12:49.303-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/spry-framework-287506/global/firewalls/allow-puma-default",
            "log_config": [],
            "name": "allow-puma-default",
            "network": "https://www.googleapis.com/compute/v1/projects/spry-framework-287506/global/networks/default",
            "priority": 1000,
            "project": "spry-framework-287506",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spry-framework-287506/global/firewalls/allow-puma-default",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "reddit-app"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/spry-framework-287506/global/images/reddit-app-base-1604235645",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/spry-framework-287506/zones/europe-west3-a/disks/reddit-app"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/spry-framework-287506/zones/europe-west3-a/instances/reddit-app",
            "instance_id": "1008928781098291360",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "appuser:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQCwaTKIx2CSfyzvGjQCO3mYHC4tdkX/jOhBoYnHLySlojMYj2y6C3/vuw+114gE6z4QxIzODU3CQ79FFJUWlCaTpWVlKmRCoRdGCPe0TD6bQ5kxEm+S4uKK9KpMZo+6UXhC2pzJxx85Soi7L/wM+XBAxbXzRMBHV9KFieadkbBBsHEKW2FJXe0M6f5Ij3KOpRNEK82PzOL6RlR00HKlQCiyyxk6UwF0u6eNmqzB9wIjwKxph3eTF0k5UP5pSnwcV6e6dgPmVg9wjNu3UF77v9jlIgn3OPV7kUOtJb+BTm5/PJd5lIAiu5oVVDCghl/fFrTqHhAma2qUwjOmRM/83dG5 appuser\n"
            },
            "metadata_fingerprint": "phVj0Xd4xTI=",
            "name": "reddit-app",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.242.211.90",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/spry-framework-287506/global/networks/default",
                "network_ip": "10.156.0.50",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/spry-framework-287506/regions/europe-west3/subnetworks/default",
                "subnetwork_project": "spry-framework-287506"
              }
            ],
            "project": "spry-framework-287506",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/spry-framework-287506/zones/europe-west3-a/instances/reddit-app",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "reddit-app"
            ],
            "tags_fingerprint": "M-ggixIz-AU=",
            "zone": "europe-west3-a"
          },
          "dependencies": [
            "module.app.google_compute_address.app_ip"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_mongo",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "27017"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-11-06T12:12:49.321-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/spry-framework-287506/global/firewalls/allow-mongo-default",
            "log_config": [],
            "name": "allow-mongo-default",
            "network": "https://www.googleapis.com/compute/v1/projects/spry-framework-287506/global/networks/default",
            "priority": 1000,
            "project": "spry-framework-287506",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spry-framework-287506/global/firewalls/allow-mongo-default",
            "source_ranges": [],
            "source_service_accounts": null,
            "source_tags": [
              "reddit-app"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "reddit-db"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/spry-framework-287506/global/images/reddit-db-base-1604236493",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/spry-framework-287506/zones/europe-west3-a/disks/reddit-db"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/spry-framework-287506/zones/europe-west3-a/instances/reddit-db",
            "instance_id": "1174567746806485165",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "appuser:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQCwaTKIx2CSfyzvGjQCO3mYHC4tdkX/jOhBoYnHLySlojMYj2y6C3/vuw+114gE6z4QxIzODU3CQ79FFJUWlCaTpWVlKmRCoRdGCPe0TD6bQ5kxEm+S4uKK9KpMZo+6UXhC2pzJxx85Soi7L/wM+XBAxbXzRMBHV9KFieadkbBBsHEKW2FJXe0M6f5Ij3KOpRNEK82PzOL6RlR00HKlQCiyyxk6UwF0u6eNmqzB9wIjwKxph3eTF0k5UP5pSnwcV6e6dgPmVg9wjNu3UF77v9jlIgn3OPV7kUOtJb+BTm5/PJd5lIAiu5oVVDCghl/fFrTqHhAma2qUwjOmRM/83dG5 appuser\n"
            },
            "metadata_fingerprint": "phVj0Xd4xTI=",
            "name": "reddit-db",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.89.166.126",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/spry-framework-287506/global/networks/default",
                "network_ip": "10.156.0.49",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/spry-framework-287506/regions/europe-west3/subnetworks/default",
                "subnetwork_project": "spry-framework-287506"
              }
            ],
            "project": "spry-framework-287506",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/spry-framework-287506/zones/europe-west3-a/instances/reddit-db",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "reddit-db"
            ],
            "tags_fingerprint": "NQyRUqL7UTU=",
            "zone": "europe-west3-a"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-11-06T12:12:49.343-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/spry-framework-287506/global/firewalls/default-allow-ssh",
            "log_config": [],
            "name": "default-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/spry-framework-287506/global/networks/default",
            "priority": 1000,
            "project": "spry-framework-287506",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spry-framework-287506/global/firewalls/default-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          }
        }
      ]
    }
  ]
}